objects/POC_Module__c/POC_Module__c.object-meta.xml
<CustomObject>
    <description>Used as a junction object between POC Requests and Modules</description>
    <label>POC Module</label>
    <nameField>
        <displayFormat>POC-MDL-{000000}</displayFormat>
        <label>POC Module</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POC Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>