objects/POC_Module__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account on the POC Request</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>POC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>