objects/POC_Module__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>POC Modules</relationshipLabel>
    <relationshipName>POC_Modules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>