objects/POC_Module__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <description>Formula to populate Module Name</description>
    <formula>Module__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Name</label>
    <type>Text</type>
</CustomField>