objects/POC_Module__c/fields/POC_Request__c.field-meta.xml
<CustomField>
    <fullName>POC_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the related POC Request</description>
    <label>POC Request</label>
    <referenceTo>POC_Request__c</referenceTo>
    <relationshipLabel>POC Modules</relationshipLabel>
    <relationshipName>POC_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>