objects/POC_Module__c/fields/POC_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Request_Name__c</fullName>
    <description>Formula to populate the POC Request Name</description>
    <formula>POC_Request__r.Name</formula>
    <label>POC Request Name</label>
    <type>Text</type>
</CustomField>