objects/POC_Module__c/fields/Product_Module__c.field-meta.xml
<CustomField>
    <fullName>Product_Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the related Product Module</description>
    <label>Product Module</label>
    <referenceTo>Product_Module__c</referenceTo>
    <relationshipLabel>POC Modules</relationshipLabel>
    <relationshipName>POC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>