objects/POC_Module__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>If Screen Sharing is true, this is the Screen Sharing Number of Operators, else its the Number of POC Endpoints.</description>
    <formula>IF( Module_Name__c =&quot;Screen Sharing&quot;, POC_Request__r.Screen_Sharing_Number_of_Operators__c, POC_Request__r.Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Screen Sharing is true, this is the Screen Sharing Number of Operators, else its the Number of POC Endpoints.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>