objects/POC_Module__c/fields/Third_Party_Product__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related product</description>
    <label>Third Party Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>POC Modules</relationshipLabel>
    <relationshipName>POC_Products</relationshipName>
    <type>Lookup</type>
</CustomField>