objects/POC_Module__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique ID used to prevent the creation of duplicate POC Module records. Populated via Flow</description>
    <label>UniqueId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>