objects/POC_Module__c/listViews/Order_Ops.listView-meta.xml
<ListView>
    <fullName>Order_Ops</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Module__c</columns>
    <columns>POC_Request__c</columns>
    <columns>Quantity__c</columns>
    <columns>Dates__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Tom,Sophie</value>
    </filters>
    <label>Order Ops</label>
</ListView>